Fix: Correcao do projeto seguindo as diretrizes do revisor
Foram adicionas neste commit, correcoes nas tags arias, dos padroes
do react e tambÃ©m melhorias das sugestoes

Tambem foi melhorado o read fazendo mencao ao bootstrap que uso para
deixar a aplicacao responsivel

--- a/src/index.css
+++ b/src/index.css
@@ -32,6 +32,12 @@ form {
 	font-size: 30px;
 	cursor: pointer;
 }
+
+button {
+  outline: none;
+  background: #F0FFFF;
+  border-style: none;
+}
 .sidenav {
   height: 100%;
   width: 0;
